syntax = "proto3";
package search_service;
option go_package = "github.com/psds-microservice/search-service/pkg/gen/search_service;search_service";
import "google/api/annotations.proto";

service SearchService {
  rpc SearchTickets (SearchTicketsRequest) returns (SearchTicketsResponse) {
    option (google.api.http) = { get: "/search/tickets" }; }
  rpc SearchSessions (SearchSessionsRequest) returns (SearchSessionsResponse) {
    option (google.api.http) = { get: "/search/sessions" }; }
  rpc SearchOperators (SearchOperatorsRequest) returns (SearchOperatorsResponse) {
    option (google.api.http) = { get: "/search/operators" }; }
  rpc IndexTicket (IndexTicketRequest) returns (IndexResponse) {
    option (google.api.http) = { post: "/search/index/ticket"; body: "*" }; }
  rpc IndexSession (IndexSessionRequest) returns (IndexResponse) {
    option (google.api.http) = { post: "/search/index/session"; body: "*" }; }
  rpc IndexOperator (IndexOperatorRequest) returns (IndexResponse) {
    option (google.api.http) = { post: "/search/index/operator"; body: "*" }; }
}

message SearchTicketsRequest {
  string status = 1;      // опционально: фильтр по status
  string session_id = 2;  // опционально: фильтр по session_id
  string client_id = 3;   // опционально: фильтр по client_id
  string operator_id = 4; // опционально: фильтр по operator_id
  int32 limit = 5;        // опционально: лимит результатов (по умолчанию 20, максимум 100)
  int32 offset = 6;       // опционально: смещение для пагинации (по умолчанию 0)
}

message SearchSessionsRequest {
  string status = 1;     // опционально: фильтр по status (waiting, active, finished)
  string client_id = 2;  // опционально: фильтр по client_id
  string pin = 3;        // опционально: фильтр по pin
  int32 limit = 4;       // опционально: лимит результатов (по умолчанию 20, максимум 100)
  int32 offset = 5;      // опционально: смещение для пагинации (по умолчанию 0)
}

message SearchOperatorsRequest {
  string region = 1;       // опционально: фильтр по region
  string role = 2;          // опционально: фильтр по role (operator, supervisor, admin)
  string display_name = 3;  // опционально: фильтр по display_name (точное совпадение)
  int32 limit = 4;          // опционально: лимит результатов (по умолчанию 20, максимум 100)
  int32 offset = 5;         // опционально: смещение для пагинации (по умолчанию 0)
}

message IndexTicketRequest {
  int64 ticket_id = 1;
  string session_id = 2;
  string client_id = 3;
  string operator_id = 4;
  string subject = 5;
  string notes = 6;
  string status = 7;
}

message IndexSessionRequest {
  string session_id = 1;
  string client_id = 2;
  string pin = 3;
  string status = 4;
}

message IndexOperatorRequest {
  string user_id = 1;
  string display_name = 2;
  string region = 3;
  string role = 4;
}

message SearchTicketsResponse {
  repeated TicketHit tickets = 1;
  int64 total = 2;        // общее количество результатов
  bool has_more = 3;      // есть ли ещё результаты
}

message SearchSessionsResponse {
  repeated SessionHit sessions = 1;
  int64 total = 2;        // общее количество результатов
  bool has_more = 3;      // есть ли ещё результаты
}

message SearchOperatorsResponse {
  repeated OperatorHit operators = 1;
  int64 total = 2;        // общее количество результатов
  bool has_more = 3;      // есть ли ещё результаты
}

message TicketHit {
  int64 ticket_id = 1;
  string session_id = 2;
  string subject = 3;
  string snippet = 4;
}

message SessionHit {
  string session_id = 1;
  string pin = 2;
  string status = 3;
  string snippet = 4;
}

message OperatorHit {
  string user_id = 1;
  string display_name = 2;
  string region = 3;
  string snippet = 4;
}

message IndexResponse {
  bool ok = 1;
}
